--- a/index.html
+++ b/index.html
@@ -14,40 +14,39 @@
 
         <div id="sidebar">
             <section>
-                <strong>Type of Chart</strong>
-                <select>
-                    <option value="">Covid Cases</option>
-                    <option value="">GDP % Growth</option>
-                    <option value="">Covid Cases + GDP % Growth</option>
-                </select>
-            </section>
-
-            <section>
-                <strong>SEA Countries</strong>
+                <strong>Type of Chart</strong><a href='javascript:reset(`types`);'>reset</a>
                 <ul>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Brunei')">Brunei</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Burma (Myanmar)')">Burma (Myanmar)</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Cambodia')">Cambodia</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Indonesia')">Indonesia</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Laos')">Laos</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Malaysia')">Malaysia</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Philippines')">Philippines</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Singapore')">Singapore</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Thailand')">Thailand</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Timor Leste')">Timor Leste</input></li>
-                    <li><input type="checkbox" class="countries" onclick="filterCountry(event, 'Vietnam')">Vietnam</input></li>
+                    <li><input type="checkbox" checked class="types">Covid-19 Cases</input></li>
+                    <li><input type="checkbox" checked class="types">GDP % Growth</input></li>
                 </ul>
             </section>
 
             <section>
-                <strong>Year and Quarter</strong>
+                <strong>SEA Countries</strong><a href='javascript:reset(`countries`);'>reset</a>
                 <ul>
-                    <li><input type="checkbox" class="countries">2019 Q4</input></li>
-                    <li><input type="checkbox" class="countries">2020 Q1</input></li>
-                    <li><input type="checkbox" class="countries">2020 Q2</input></li>
-                    <li><input type="checkbox" class="countries">2020 Q3</input></li>
-                    <li><input type="checkbox" class="countries">2020 Q4</input></li>
-                    <li><input type="checkbox" class="countries">2021 Q1</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Brunei')">Brunei</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Burma (Myanmar)')">Burma (Myanmar)</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Cambodia')">Cambodia</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Indonesia')">Indonesia</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Laos')">Laos</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Malaysia')">Malaysia</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Philippines')">Philippines</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Singapore')">Singapore</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Thailand')">Thailand</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Timor Leste')">Timor Leste</input></li>
+                    <li><input type="checkbox" class="countries" checked onclick="filterCountry(event, 'Vietnam')">Vietnam</input></li>
+                </ul>
+            </section>
+
+            <section>
+                <strong>Year and Quarter</strong><a href='javascript:reset(`quarters`);'>reset</a>
+                <ul>
+                    <li><input type="checkbox" checked class="quarters">2019 Q4</input></li>
+                    <li><input type="checkbox" checked class="quarters">2020 Q1</input></li>
+                    <li><input type="checkbox" checked class="quarters">2020 Q2</input></li>
+                    <li><input type="checkbox" checked class="quarters">2020 Q3</input></li>
+                    <li><input type="checkbox" checked class="quarters">2020 Q4</input></li>
+                    <li><input type="checkbox" checked class="quarters">2021 Q1</input></li>
                 </ul>
             </section>
         </div>
