more dynamic stuff

--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
             <section>
                 <strong>SEA Countries</strong><a href='javascript:reset(`countries`);'>reset</a>
                 <ul>
-                    <li><input class="countries" name='Brunei' onclick="filterCountry(event, 'Brunei')">Brunei</input></li>
-                    <li><input class="countries" name='Burma (Myanmar)' onclick="filterCountry(event, 'Burma (Myanmar)')">Burma (Myanmar)</input></li>
-                    <li><input class="countries" name='Cambodia' onclick="filterCountry(event, 'Cambodia')">Cambodia</input></li>
-                    <li><input class="countries" name='Indonesia' onclick="filterCountry(event, 'Indonesia')">Indonesia</input></li>
-                    <li><input class="countries" name='Laos' onclick="filterCountry(event, 'Laos')">Laos</input></li>
-                    <li><input class="countries" name='Malaysia' onclick="filterCountry(event, 'Malaysia')">Malaysia</input></li>
-                    <li><input class="countries" name='Philippines' onclick="filterCountry(event, 'Philippines')">Philippines</input></li>
-                    <li><input class="countries" name='Singapore' onclick="filterCountry(event, 'Singapore')">Singapore</input></li>
-                    <li><input class="countries" name='Thailand' onclick="filterCountry(event, 'Thailand')">Thailand</input></li>
-                    <li><input class="countries" name='Timor Leste' onclick="filterCountry(event, 'Timor Leste')">Timor Leste</input></li>
-                    <li><input class="countries" name='Vietnam' onclick="filterCountry(event, 'Vietnam')">Vietnam</input></li>
+                    <li><input class="countries" name='Brunei' >Brunei</input></li>
+                    <li><input class="countries" name='Burma (Myanmar)' >Burma (Myanmar)</input></li>
+                    <li><input class="countries" name='Cambodia' >Cambodia</input></li>
+                    <li><input class="countries" name='Indonesia' >Indonesia</input></li>
+                    <li><input class="countries" name='Laos' >Laos</input></li>
+                    <li><input class="countries" name='Malaysia' >Malaysia</input></li>
+                    <li><input class="countries" name='Philippines' >Philippines</input></li>
+                    <li><input class="countries" name='Singapore' >Singapore</input></li>
+                    <li><input class="countries" name='Thailand' >Thailand</input></li>
+                    <li><input class="countries" name='Timor Leste' >Timor Leste</input></li>
+                    <li><input class="countries" name='Vietnam' >Vietnam</input></li>
                 </ul>
             </section>
 
             <section>
                 <strong>Year and Quarter</strong><a href='javascript:reset(`quarters`);'>reset</a>
                 <ul>
-                    <li><input name='2019 Q4' class="quarters">2019 Q4</input></li>
-                    <li><input name='2020 Q1' class="quarters">2020 Q1</input></li>
-                    <li><input name='2020 Q2' class="quarters">2020 Q2</input></li>
-                    <li><input name='2020 Q3' class="quarters">2020 Q3</input></li>
-                    <li><input name='2020 Q4' class="quarters">2020 Q4</input></li>
-                    <li><input name='2021 Q1' class="quarters">2021 Q1</input></li>
+                    <li><input name='2019-4' class="quarters">2019 Q4</input></li>
+                    <li><input name='2020-1' class="quarters">2020 Q1</input></li>
+                    <li><input name='2020-2' class="quarters">2020 Q2</input></li>
+                    <li><input name='2020-3' class="quarters">2020 Q3</input></li>
+                    <li><input name='2020-4' class="quarters">2020 Q4</input></li>
+                    <li><input name='2021-1' class="quarters">2021 Q1</input></li>
                 </ul>
             </section>
         </div>
