giant line chart

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             <section>
                 <strong>SEA Countries</strong><a href='javascript:reset(`countries`);'>reset</a>
                 <ul>
-                    <li><input class="countries" name='Brunei' >Brunei</input></li>
-                    <li><input class="countries" name='Burma (Myanmar)' >Burma (Myanmar)</input></li>
-                    <li><input class="countries" name='Cambodia' >Cambodia</input></li>
-                    <li><input class="countries" name='Indonesia' >Indonesia</input></li>
-                    <li><input class="countries" name='Laos' >Laos</input></li>
-                    <li><input class="countries" name='Malaysia' >Malaysia</input></li>
-                    <li><input class="countries" name='Philippines' >Philippines</input></li>
-                    <li><input class="countries" name='Singapore' >Singapore</input></li>
-                    <li><input class="countries" name='Thailand' >Thailand</input></li>
-                    <li><input class="countries" name='Timor Leste' >Timor Leste</input></li>
-                    <li><input class="countries" name='Vietnam' >Vietnam</input></li>
+                    <li><input class="countries" name='Brunei' /><label>Brunei</label></li>
+                    <li><input class="countries" name='Burma (Myanmar)' /><label>Burma (Myanmar)</label></li>
+                    <li><input class="countries" name='Cambodia' /><label>Cambodia</label></li>
+                    <li><input class="countries" name='Indonesia' /><label>Indonesia</label></li>
+                    <li><input class="countries" name='Laos' /><label>Laos</label></li>
+                    <li><input class="countries" name='Malaysia' /><label>Malaysia</label></li>
+                    <li><input class="countries" name='Philippines' /><label>Philippines</label></li>
+                    <li><input class="countries" name='Singapore' /><label>Singapore</label></li>
+                    <li><input class="countries" name='Thailand' /><label>Thailand</label></li>
+                    <li><input class="countries" name='Timor Leste' /><label>Timor Leste</label></li>
+                    <li><input class="countries" name='Vietnam' /><label>Vietnam</label></li>
                 </ul>
             </section>
 
