--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
     
     </div>
 </body>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
 <style>
+    html {
+        font-family: 'Nunito Sans', sans-serif;
+    }
     /* The switch - the box around the slider */
     .switch {
     position: relative;
